silex_css/tests/ui/fail_invalid_signal.stderr
error[E0277]: 类型 `Hex` 无法作为有效的 CSS `BorderTopWidth` 属性值使用
 --> tests/ui/fail_invalid_signal.rs:8:43
  |
8 |     let _ = Style::new().border_top_width(color_sig);
  |                          ---------------- ^^^^^^^^^ 无效的 CSS 属性类型
  |                          |
  |                          required by a bound introduced by this call
  |
  = help: the trait `ValidFor<BorderTopWidth>` is not implemented for `Hex`
  = note: 请检查是否传入了错误的类型（例如将 Px 传给了 Color）。如果必须传入复杂的动态表达式，可以使用 `UnsafeCss::new(...)` 显式绕过。
  = help: the following other types implement trait `ValidFor<Prop>`:
            `Hex` implements `ValidFor<AlignContent>`
            `Hex` implements `ValidFor<AlignItems>`
            `Hex` implements `ValidFor<AlignSelf>`
            `Hex` implements `ValidFor<AlignmentBaseline>`
            `Hex` implements `ValidFor<Animation>`
            `Hex` implements `ValidFor<AnimationComposition>`
            `Hex` implements `ValidFor<AnimationDelay>`
            `Hex` implements `ValidFor<AnimationDirection>`
          and $N others
note: required by a bound in `silex_css::builder::Style::border_top_width`
 --> src/builder.rs
  |
  |                     V::Value: ValidFor<props::$pascal> + Display + Clone + Sized + 'static,
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Style::border_top_width`
...
  | crate::for_all_properties!(generate_builder_methods);
  | ---------------------------------------------------- in this macro invocation
  |
 ::: src/properties.rs
  |
  |             (border_top_width, "border-top-width", BorderTopWidth, Dimension),
  |              ---------------- required by a bound in this associated function
  = note: this error originates in the macro `generate_builder_methods` which comes from the expansion of the macro `crate::for_all_properties` (in Nightly builds, run with -Z macro-backtrace for more info)
